added games gallery font styling

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               <a class="nav-link" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Games</a>
+              <a class="nav-link" href="#games">Games</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Accessories</a>
@@ -119,6 +119,125 @@
       >
         <span class="carousel-control-next-icon"></span>
       </button>
+    </div>
+    <!--Games gallery-->
+    <div class="container">
+      <h1 class="fw-light text-center text-lg-start mt-4 mb-0">
+        Our Video Games
+      </h1>
+
+      <hr class="mt-2 mb-5" />
+
+      <div id="games" class="row text-center text-lg-start">
+        <div class="col-lg-3 col-md-4 col-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img
+              class="img-fluid img-thumbnail"
+              src="./assets/gallery_games/g1.PNG"
+              alt=""
+            />
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img
+              class="img-fluid img-thumbnail"
+              src="./assets/gallery_games/g2.PNG"
+              alt=""
+            />
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img
+              class="img-fluid img-thumbnail"
+              src="./assets/gallery_games/g3.PNG"
+              alt=""
+            />
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img
+              class="img-fluid img-thumbnail"
+              src="./assets/gallery_games/g1.PNG"
+              alt=""
+            />
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img
+              class="img-fluid img-thumbnail"
+              src="./assets/gallery_games/g3.PNG"
+              alt=""
+            />
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img
+              class="img-fluid img-thumbnail"
+              src="./assets/gallery_games/g5.PNG"
+              alt=""
+            />
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img
+              class="img-fluid img-thumbnail"
+              src="./assets/gallery_games/g4.PNG"
+              alt=""
+            />
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img
+              class="img-fluid img-thumbnail"
+              src="./assets/gallery_games/g1.PNG"
+              alt=""
+            />
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img
+              class="img-fluid img-thumbnail"
+              src="./assets/gallery_games/g5.PNG"
+              alt=""
+            />
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img
+              class="img-fluid img-thumbnail"
+              src="./assets/gallery_games/g3.PNG"
+              alt=""
+            />
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img
+              class="img-fluid img-thumbnail"
+              src="./assets/gallery_games/g2.PNG"
+              alt=""
+            />
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img
+              class="img-fluid img-thumbnail"
+              src="./assets/gallery_games/g4.PNG"
+              alt=""
+            />
+          </a>
+        </div>
+      </div>
     </div>
   </body>
 </html>
