added accessories section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="shortcut icon" href="favicon.png" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <nav class="navbar fixed-top navbar-expand-sm bg-dark navbar-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
           <img
@@ -43,7 +43,7 @@
               <a class="nav-link" href="#games">Games</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Accessories</a>
+              <a class="nav-link" href="#accessories">Accessories</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">About</a>
@@ -120,122 +120,375 @@
         <span class="carousel-control-next-icon"></span>
       </button>
     </div>
+
+    <h1 id="games" class="fw-light text-center mt-4 mb-0">Our Video Games</h1>
     <!--Games gallery-->
     <div class="container">
-      <h1 class="fw-light text-center text-lg-start mt-4 mb-0">
-        Our Video Games
-      </h1>
-
       <hr class="mt-2 mb-5" />
+      <div class="row text-center text-lg-start">
+        <div class="col-lg-3 col-md-4 col-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img
+              class="img-fluid img-thumbnail"
+              src="./assets/gallery_games/g1.PNG"
+              alt=""
+            />
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img
+              class="img-fluid img-thumbnail"
+              src="./assets/gallery_games/g2.PNG"
+              alt=""
+            />
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img
+              class="img-fluid img-thumbnail"
+              src="./assets/gallery_games/g3.PNG"
+              alt=""
+            />
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img
+              class="img-fluid img-thumbnail"
+              src="./assets/gallery_games/g1.PNG"
+              alt=""
+            />
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img
+              class="img-fluid img-thumbnail"
+              src="./assets/gallery_games/g3.PNG"
+              alt=""
+            />
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img
+              class="img-fluid img-thumbnail"
+              src="./assets/gallery_games/g5.PNG"
+              alt=""
+            />
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img
+              class="img-fluid img-thumbnail"
+              src="./assets/gallery_games/g4.PNG"
+              alt=""
+            />
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img
+              class="img-fluid img-thumbnail"
+              src="./assets/gallery_games/g1.PNG"
+              alt=""
+            />
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img
+              class="img-fluid img-thumbnail"
+              src="./assets/gallery_games/g5.PNG"
+              alt=""
+            />
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img
+              class="img-fluid img-thumbnail"
+              src="./assets/gallery_games/g3.PNG"
+              alt=""
+            />
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img
+              class="img-fluid img-thumbnail"
+              src="./assets/gallery_games/g2.PNG"
+              alt=""
+            />
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img
+              class="img-fluid img-thumbnail"
+              src="./assets/gallery_games/g4.PNG"
+              alt=""
+            />
+          </a>
+        </div>
+      </div>
+    </div>
 
-      <div id="games" class="row text-center text-lg-start">
-        <div class="col-lg-3 col-md-4 col-6">
-          <a href="#" class="d-block mb-4 h-100">
-            <img
-              class="img-fluid img-thumbnail"
-              src="./assets/gallery_games/g1.PNG"
-              alt=""
-            />
-          </a>
-        </div>
-        <div class="col-lg-3 col-md-4 col-6">
-          <a href="#" class="d-block mb-4 h-100">
-            <img
-              class="img-fluid img-thumbnail"
-              src="./assets/gallery_games/g2.PNG"
-              alt=""
-            />
-          </a>
-        </div>
-        <div class="col-lg-3 col-md-4 col-6">
-          <a href="#" class="d-block mb-4 h-100">
-            <img
-              class="img-fluid img-thumbnail"
-              src="./assets/gallery_games/g3.PNG"
-              alt=""
-            />
-          </a>
-        </div>
-        <div class="col-lg-3 col-md-4 col-6">
-          <a href="#" class="d-block mb-4 h-100">
-            <img
-              class="img-fluid img-thumbnail"
-              src="./assets/gallery_games/g1.PNG"
-              alt=""
-            />
-          </a>
-        </div>
-        <div class="col-lg-3 col-md-4 col-6">
-          <a href="#" class="d-block mb-4 h-100">
-            <img
-              class="img-fluid img-thumbnail"
-              src="./assets/gallery_games/g3.PNG"
-              alt=""
-            />
-          </a>
-        </div>
-        <div class="col-lg-3 col-md-4 col-6">
-          <a href="#" class="d-block mb-4 h-100">
-            <img
-              class="img-fluid img-thumbnail"
-              src="./assets/gallery_games/g5.PNG"
-              alt=""
-            />
-          </a>
-        </div>
-        <div class="col-lg-3 col-md-4 col-6">
-          <a href="#" class="d-block mb-4 h-100">
-            <img
-              class="img-fluid img-thumbnail"
-              src="./assets/gallery_games/g4.PNG"
-              alt=""
-            />
-          </a>
-        </div>
-        <div class="col-lg-3 col-md-4 col-6">
-          <a href="#" class="d-block mb-4 h-100">
-            <img
-              class="img-fluid img-thumbnail"
-              src="./assets/gallery_games/g1.PNG"
-              alt=""
-            />
-          </a>
-        </div>
-        <div class="col-lg-3 col-md-4 col-6">
-          <a href="#" class="d-block mb-4 h-100">
-            <img
-              class="img-fluid img-thumbnail"
-              src="./assets/gallery_games/g5.PNG"
-              alt=""
-            />
-          </a>
-        </div>
-        <div class="col-lg-3 col-md-4 col-6">
-          <a href="#" class="d-block mb-4 h-100">
-            <img
-              class="img-fluid img-thumbnail"
-              src="./assets/gallery_games/g3.PNG"
-              alt=""
-            />
-          </a>
-        </div>
-        <div class="col-lg-3 col-md-4 col-6">
-          <a href="#" class="d-block mb-4 h-100">
-            <img
-              class="img-fluid img-thumbnail"
-              src="./assets/gallery_games/g2.PNG"
-              alt=""
-            />
-          </a>
-        </div>
-        <div class="col-lg-3 col-md-4 col-6">
-          <a href="#" class="d-block mb-4 h-100">
-            <img
-              class="img-fluid img-thumbnail"
-              src="./assets/gallery_games/g4.PNG"
-              alt=""
-            />
-          </a>
+    <h1 id="accessories" class="fw-light text-center mt-4 mb-0">Gaming Accessories</h1>
+    <hr class="mt-2 mb-5" />
+    <div class="container-fluid">
+      <div class="px-lg-5">
+        <div class="row">
+          <!-- Gallery item -->
+          <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+            <div class="bg-white rounded shadow-sm">
+              <img
+                src="./assets/gallery_games/img-1.jpg"
+                alt=""
+                class="img-fluid card-img-top"
+              />
+              <div class="p-4">
+                <h5><a href="#" class="text-dark">Red paint cup</a></h5>
+                <p class="small text-muted mb-0">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                </p>
+                <div
+                  class="d-flex align-items-center justify-content-between rounded-pill bg-light px-3 py-2 mt-4"
+                >
+                  <p class="small mb-0">
+                    <i class="fa fa-picture-o mr-2"></i
+                    ><span class="font-weight-bold">$300</span>
+                  </p>
+                  <div
+                    class="badge badge-danger px-3 rounded-pill font-weight-normal"
+                  >
+                    New
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- End -->
+
+          <!-- Gallery item -->
+          <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+            <div class="bg-white rounded shadow-sm">
+              <img
+                src="./assets/gallery_games/img-2.jpg"
+                alt=""
+                class="img-fluid card-img-top"
+              />
+              <div class="p-4">
+                <h5><a href="#" class="text-dark">Blorange</a></h5>
+                <p class="small text-muted mb-0">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                </p>
+                <div
+                  class="d-flex align-items-center justify-content-between rounded-pill bg-light px-3 py-2 mt-4"
+                >
+                  <p class="small mb-0">
+                    <i class="fa fa-picture-o mr-2"></i
+                    ><span class="font-weight-bold">$350</span>
+                  </p>
+                  <div
+                    class="badge badge-primary px-3 rounded-pill font-weight-normal"
+                  >
+                    Trend
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- End -->
+
+          <!-- Gallery item -->
+          <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+            <div class="bg-white rounded shadow-sm">
+              <img
+                src="./assets/gallery_games/img-3.jpg"
+                alt=""
+                class="img-fluid card-img-top"
+              />
+              <div class="p-4">
+                <h5><a href="#" class="text-dark">And She Realized</a></h5>
+                <p class="small text-muted mb-0">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                </p>
+                <div
+                  class="d-flex align-items-center justify-content-between rounded-pill bg-light px-3 py-2 mt-4"
+                >
+                  <p class="small mb-0">
+                    <i class="fa fa-picture-o mr-2"></i
+                    ><span class="font-weight-bold">$120</span>
+                  </p>
+                  <div
+                    class="badge badge-warning px-3 rounded-pill font-weight-normal text-white"
+                  >
+                    Featured
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- End -->
+
+          <!-- Gallery item -->
+          <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+            <div class="bg-white rounded shadow-sm">
+              <img
+                src="./assets/gallery_games/img-4.jpg"
+                alt=""
+                class="img-fluid card-img-top"
+              />
+              <div class="p-4">
+                <h5><a href="#" class="text-dark">DOSE Juice</a></h5>
+                <p class="small text-muted mb-0">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                </p>
+                <div
+                  class="d-flex align-items-center justify-content-between rounded-pill bg-light px-3 py-2 mt-4"
+                >
+                  <p class="small mb-0">
+                    <i class="fa fa-picture-o mr-2"></i
+                    ><span class="font-weight-bold">$50</span>
+                  </p>
+                  <div
+                    class="badge badge-success px-3 rounded-pill font-weight-normal"
+                  >
+                    Hot
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- End -->
+
+          <!-- Gallery item -->
+          <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+            <div class="bg-white rounded shadow-sm">
+              <img
+                src="./assets/gallery_games/img-1.jpg"
+                alt=""
+                class="img-fluid card-img-top"
+              />
+              <div class="p-4">
+                <h5><a href="#" class="text-dark">Red paint cup</a></h5>
+                <p class="small text-muted mb-0">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                </p>
+                <div
+                  class="d-flex align-items-center justify-content-between rounded-pill bg-light px-3 py-2 mt-4"
+                >
+                  <p class="small mb-0">
+                    <i class="fa fa-picture-o mr-2"></i
+                    ><span class="font-weight-bold">$300</span>
+                  </p>
+                  <div
+                    class="badge badge-danger px-3 rounded-pill font-weight-normal"
+                  >
+                    New
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- End -->
+
+          <!-- Gallery item -->
+          <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+            <div class="bg-white rounded shadow-sm">
+              <img
+                src="./assets/gallery_games/img-2.jpg"
+                alt=""
+                class="img-fluid card-img-top"
+              />
+              <div class="p-4">
+                <h5><a href="#" class="text-dark">Lorem ipsum dolor</a></h5>
+                <p class="small text-muted mb-0">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                </p>
+                <div
+                  class="d-flex align-items-center justify-content-between rounded-pill bg-light px-3 py-2 mt-4"
+                >
+                  <p class="small mb-0">
+                    <i class="fa fa-picture-o mr-2"></i
+                    ><span class="font-weight-bold">$350</span>
+                  </p>
+                  <div
+                    class="badge badge-primary px-3 rounded-pill font-weight-normal"
+                  >
+                    Trend
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- End -->
+
+          <!-- Gallery item -->
+          <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+            <div class="bg-white rounded shadow-sm">
+              <img
+                src="./assets/gallery_games/img-3.jpg"
+                alt=""
+                class="img-fluid card-img-top"
+              />
+              <div class="p-4">
+                <h5><a href="#" class="text-dark">Lorem ipsum dolor</a></h5>
+                <p class="small text-muted mb-0">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                </p>
+                <div
+                  class="d-flex align-items-center justify-content-between rounded-pill bg-light px-3 py-2 mt-4"
+                >
+                  <p class="small mb-0">
+                    <i class="fa fa-picture-o mr-2"></i
+                    ><span class="font-weight-bold">$300</span>
+                  </p>
+                  <div
+                    class="badge badge-warning px-3 rounded-pill font-weight-normal text-white"
+                  >
+                    Featured
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- End -->
+
+          <!-- Gallery item -->
+          <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+            <div class="bg-white rounded shadow-sm">
+              <img
+                src="./assets/gallery_games/img-4.jpg"
+                alt=""
+                class="img-fluid card-img-top"
+              />
+              <div class="p-4">
+                <h5><a href="#" class="text-dark">Lorem ipsum dolor</a></h5>
+                <p class="small text-muted mb-0">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                </p>
+                <div
+                  class="d-flex align-items-center justify-content-between rounded-pill bg-light px-3 py-2 mt-4"
+                >
+                  <p class="small mb-0">
+                    <i class="fa fa-picture-o mr-2"></i
+                    ><span class="font-weight-bold">$55</span>
+                  </p>
+                  <div
+                    class="badge badge-success px-3 rounded-pill font-weight-normal"
+                  >
+                    Hot
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- End -->
         </div>
       </div>
     </div>
