--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
       </div>
     </nav>
     <!-- Carousel -->
+    <hr class="mt-2 mb-5" />
     <div id="demo" class="carousel slide" data-bs-ride="carousel">
       <!-- Indicators/dots -->
       <div class="carousel-indicators">
@@ -246,7 +247,7 @@
           <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
             <div class="bg-white rounded shadow-sm">
               <img
-                src="./assets/gallery_games/img-1.jpg"
+                src="./assets/gallery_products/img-1.png"
                 alt=""
                 class="img-fluid card-img-top"
               />
@@ -277,7 +278,7 @@
           <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
             <div class="bg-white rounded shadow-sm">
               <img
-                src="./assets/gallery_games/img-2.jpg"
+                src="./assets/gallery_products/img-2.png"
                 alt=""
                 class="img-fluid card-img-top"
               />
@@ -308,7 +309,7 @@
           <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
             <div class="bg-white rounded shadow-sm">
               <img
-                src="./assets/gallery_games/img-3.jpg"
+                src="./assets/gallery_products/img-3.png"
                 alt=""
                 class="img-fluid card-img-top"
               />
@@ -339,7 +340,7 @@
           <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
             <div class="bg-white rounded shadow-sm">
               <img
-                src="./assets/gallery_games/img-4.jpg"
+                src="./assets/gallery_products/img-4.png"
                 alt=""
                 class="img-fluid card-img-top"
               />
@@ -370,7 +371,7 @@
           <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
             <div class="bg-white rounded shadow-sm">
               <img
-                src="./assets/gallery_games/img-1.jpg"
+                src="./assets/gallery_products/img-1.png"
                 alt=""
                 class="img-fluid card-img-top"
               />
@@ -401,7 +402,7 @@
           <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
             <div class="bg-white rounded shadow-sm">
               <img
-                src="./assets/gallery_games/img-2.jpg"
+                src="./assets/gallery_products/img-2.png"
                 alt=""
                 class="img-fluid card-img-top"
               />
@@ -432,7 +433,7 @@
           <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
             <div class="bg-white rounded shadow-sm">
               <img
-                src="./assets/gallery_games/img-3.jpg"
+                src="./assets/gallery_products/img-3.png"
                 alt=""
                 class="img-fluid card-img-top"
               />
@@ -463,7 +464,7 @@
           <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
             <div class="bg-white rounded shadow-sm">
               <img
-                src="./assets/gallery_games/img-4.jpg"
+                src="./assets/gallery_products/img-4.png"
                 alt=""
                 class="img-fluid card-img-top"
               />
